--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">myongsik_android</string>
+
+    <string name="home_today_tv">오늘의 식단</string>
 </resources>
