--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">myongsik_android</string>
 
     <string name="home_today_tv">오늘의 식단</string>
+    <string name="week_today_tv">주간 식단표</string>
 </resources>
