--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">myongsik_android</string>
+    <string name="app_name">명식이</string>
 
     <string name="home_today_tv">오늘의 식단</string>
     <string name="week_today_tv">주간 식단표</string>
