--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,8 @@
     <string name="home_time_tv">운영시간 │ 중식 11:30 ~14:00 │ 석식 17:30 ~19:00</string>
     <string name="home_time_life_tv">운영시간 │ 중식 11:30~13:30 | 석식 17:00 ~ 18:30</string>
     <string name="home_time_staff_tv">운영시간 │ 중식 11:30~13:30 | 석식 17:30 ~ 18:30</string>
-    <string name="home_time_student_tv">운영시간 │ 중식 11:30~14:00</string>
+    <string name="home_time_student_tv">운영시간 │ 조식 8:30~9:30 | 중식 10:00 ~ 15:00</string>
+    <string name="home_time_myonog_tv">운영시간 │ 미정</string>
     <string name="week_today_tv">주간 식단표</string>
     <string name="splash_help_select">캠퍼스 설정을 통해 \n 접속 시 선택한 캠퍼스 \n 학식 메뉴를 확인할 수 있습니다.</string>
 </resources>
