--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="campus_setting">캠퍼스 설정</string>
     <string name="app_sub_title">명지대 학식 식단표 제공 앱</string>
     <string name="date_format">%s월 %s일</string>
+    <string name="ranking_title_text">명지대학생들이 %s명 담았어요!</string>
 </resources>
