refact : 공백 주석제거, string 분리

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,22 +1,75 @@
 <resources>
     <string name="app_name">명식이</string>
 
-    <!--  식단 화면  -->
     <string name="home_today_tv">오늘의 학식 │  hv</string>
     <string name="home_time_tv">운영시간 │ 중식 11:30 ~14:00 │ 석식 17:30 ~19:00</string>
     <string name="home_time_life_tv">운영시간 │ 중식 11:30~13:30 | 석식 17:00 ~ 18:30</string>
     <string name="home_time_staff_tv">운영시간 │ 중식 11:30~13:30 | 석식 17:30 ~ 18:30</string>
     <string name="home_time_student_tv">운영시간 │ 조식 8:30~9:30 | 중식 10:00 ~ 15:00</string>
     <string name="home_time_myonog_tv">운영시간 │ 미정</string>
+
     <string name="week_today_tv">주간 식단표</string>
     <string name="splash_help_select">캠퍼스 설정을 통해 \n 접속 시 선택한 캠퍼스 \n 학식 메뉴를 확인할 수 있습니다.</string>
     <string name="seoul_campus">인문캠퍼스</string>
     <string name="yongin_campus">자연캠퍼스</string>
     <string name="campus_setting">캠퍼스 설정</string>
+
     <string name="app_sub_title">명지대 학식 식단표 제공 앱</string>
     <string name="date_format">%s월 %s일</string>
     <string name="ranking_title_text">명지대학생들이 %s명 담았어요!</string>
     <string name="is_null_phone_number">전화번호가 없습니다.</string>
     <string name="please_install_naver_map">네이버 지도를 설치해주세요.</string>
     <string name="direct_go">바로 가기</string>
+
+    <string name="home_today_food">오늘의 학식 │  </string>
+    <string name="home_today_day">00월 00일</string>
+    <string name="home_today_not_food_day">2022년 10월 4일 화요일</string>
+
+    <string name="food_review_bt">학식에 대한 의견 남기기</string>
+
+    <string name="love_not_restaurant">관심목록이 비어있습니다.</string>
+
+    <string name="search_empty_list">검색 결과가 없습니다.</string>
+    <string name="search_restaurant_text">명지맛집을 검색 하세요.</string>
+    <string name="search_restaurant_list">#모아뒀으니 골라보세요!</string>
+    <string name="search_univ_good">#명지맛집</string>
+    <string name="search_univ_cafe">#명지카페</string>
+    <string name="search_univ_drink">#명지술집</string>
+    <string name="search_univ_bread">#명지빵집</string>
+    <string name="search_already_food">#명식이가 준비했습니다!</string>
+
+    <string name="select_teacher_restaurant">교직원 식당</string>
+    <string name="select_teacher_restaurant_time">운영시간\n중식 11:30~13:30 | 석식 17:30 ~ 18:30</string>
+    <string name="select_room_restaurant">생활관 식당</string>
+    <string name="select_room_restaurant_time">운영시간\n중식 11:30~13:30 | 석식 17:00 ~ 18:30</string>
+    <string name="select_student_restaurant">학관 식당</string>
+    <string name="select_student_restaurant_time">운영시간\n조식 8:30~9:30 | 중식 10:00 ~ 15:00</string>
+    <string name="select_new_restaurant">명진당</string>
+    <string name="select_new_restaurant_time">운영시간\n미정</string>
+
+    <string name="splash_myongji_title_text">명지대 학식 식단표 제공 앱</string>
+    <string name="tag_myongji_good_food">#명지 맛집</string>
+
+    <string name="no_dialog_text">아니요</string>
+    <string name="yes_dialog_text">네</string>
+    <string name="hello_dialog_text">안녕하세요</string>
+
+    <string name="campus_dialog_title_text"> 캠퍼스 설정 안내 </string>
+    <string name="campus_dialog_sub_title_text">최초로 설정된 캠퍼스는 이후 변경이 어려우니 신중하게 골라주세요!</string>
+    <string name="campus_dialog_okay_text">확 인</string>
+
+    <string name="lunch_a_text">중식A</string>
+    <string name="lunch_b_text">중식B</string>
+    <string name="dinner_text">석식</string>
+    <string name="food_list">베이컨김치볶음밥 후라이 맑은우동국물 피쉬앤칩스 케찹 단무지 배추김치</string>
+    <string name="food_good_evaluation">맛있어요 </string>
+    <string name="food_hate_evaluation">맛없어요 </string>
+
+    <string name="restaurant_name">식당이름</string>
+    <string name="restaurant_type">가게 종류</string>
+    <string name="restaurant_distance">320m</string>
+    <string name="restaurant_location">가게 위치</string>
+    <string name="restaurant_phone">가게 전화번호</string>
+
+    <string name="review_okay">완료</string>
 </resources>
