[feat] : 찜꽁리스트 GET API 연결

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,7 +36,7 @@
     <string name="search_univ_cafe">#명지카페</string>
     <string name="search_univ_drink">#명지술집</string>
     <string name="search_univ_bread">#명지빵집</string>
-    <string name="search_already_food">#명식이가 준비했습니다!</string>
+    <string name="search_already_food">#명지인이 선택한 맛집</string>
 
     <string name="select_teacher_restaurant">교직원 식당</string>
     <string name="select_teacher_restaurant_time">운영시간\n중식 11:30~13:30 | 석식 17:30 ~ 18:30</string>
