--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,4 +73,6 @@
 
     <string name="review_okay">완료</string>
     <string name="check_newtwork_state">네트워크 상태를 확인해주세요.</string>
+
+    <string name="back_button_warning">"'뒤로'버튼을 한번 더 누르시면 종료됩니다."</string>
 </resources>
