--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,8 +71,18 @@
     <string name="restaurant_location">가게 위치</string>
     <string name="restaurant_phone">가게 전화번호</string>
 
+    <string name="user_area_s">교직원식당</string>
+    <string name="user_area_l">생활관식당</string>
+    <string name="user_area_h">학생식당</string>
+    <string name="user_area_m">명진당식당</string>
+    <string name="user_area_mcc">MCC식당</string>
+
     <string name="review_okay">완료</string>
     <string name="check_newtwork_state">네트워크 상태를 확인해주세요.</string>
 
     <string name="back_button_warning">"'뒤로'버튼을 한번 더 누르시면 종료됩니다."</string>
+    <string name="opinion_write">의견 작성</string>
+    <string name="please_opinion_write">의견을 작성해주세요!</string>
+    <string name="weekend_noti">주말 운영 안내</string>
+    <string name="weekend_not_service">주말에는 식당을 운영하지 않습니다.</string>
 </resources>
