feat(sort): 거리순 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,6 +73,7 @@
     
     <string name="rank_sort_menu_popularity">인기순</string>
     <string name="rank_sort_menu_suggestion">추천순</string>
+    <string name="rank_sort_menu_distance">거리순</string>
 
     <string name="review_okay">완료</string>
     <string name="check_newtwork_state">네트워크 상태를 확인해주세요.</string>
