--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,4 +95,6 @@
     <string name="tag_good_cafe">카페</string>
     <string name="tag_good_drink">술집</string>
     <string name="tag_good_bread">빵집</string>
+
+    <string name="widget_setting">위젯 설정</string>
 </resources>
