[feat] : Update Bottom Dialog 제작

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -127,4 +127,6 @@
     <string name="salad">샐러드</string>
     <string name="fried_rice">볶음밥</string>
 
+    <string name="update_not_see">다시 보지 않기</string>
+
 </resources>
