--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -129,4 +129,10 @@
 
     <string name="update_not_see">다시 보지 않기</string>
 
+    <string name="map_title">맛집 지도</string>
+    <string name="map_text">명지대학교 학생들이 선택한 인증된 맛집을 \n지도로 한 눈에 확인할 수 있어요!</string>
+
+    <string name="widget_title">위젯 설정</string>
+    <string name="widget_text">앱을 접속하지 않고도 원하는 식당 한 곳을 \n설정하여 위젯으로 메뉴를 확인할 수 있어요!</string>
+
 </resources>
