--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@
 
     <string name="search_empty_list">검색 결과가 없습니다.</string>
     <string name="search_restaurant_text">검색어를 입력하세요.</string>
-    <string name="search_restaurant_list">#모아뒀으니 골라보세요!</string>
+    <string name="search_restaurant_list">#명지맛집 모음!</string>
     <string name="search_univ_good">#명지맛집</string>
     <string name="search_univ_cafe">#명지카페</string>
     <string name="search_univ_drink">#명지술집</string>
